AddStudent Input and Button have fixed Height - Vertically Aligned

--- a/src/components/AddStudent.module.css
+++ b/src/components/AddStudent.module.css
@@ -1,5 +1,10 @@
+:root {
+  --addStudentHeight: 48px;
+}
+
 .addStudent {
   display: flex;
+  height: var(--addStudentHeight);
 }
 
 .addStudentInput {
@@ -16,7 +21,7 @@
 .addStudentButton {
   border: none;
   cursor: pointer;
-  width: 30px;
+  width: var(--addStudentHeight);
   border-radius: var(--space);
   background-color: var(--color-primary-light);
   color: white;
